          07-01-04  Bfo     os9exec_nt  - <dllList> introduced
                                        - DLL connection for plugins added (Plugin Loader)
                                        - BootLoader beautified
                                        - titles() rearranged
          07-01-04  Bfo     telnetaccess: Shorter window title for Windows version
          07-01-04  Bfo     debug       : Display memory size with 7 instead 6 digits
          07-01-04  Bfo     fileaccess  : 'touchfile' only used for MACFILES
          07-01-04  Bfo     os9_uae     : Title comment unified
          07-01-04  Bfo     newcpu      : Write 'CPU' in line
                                                                                                     
    3.34  07-01-??  Bfo
    -------------------  
*/



/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux/MacOSX telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (+)  icpt_signal problem with "clock2" utility
*/


/* To do: */
/*
    -   RBF: do read only, if write larger than a sector
    -  (SCSI subsystem for Linux)
    -   direct line editing on Linux (over network)
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree optimisation
    -   termcap support for the DOS window.
    -   paging for SCF devices
    -   tab expansion for SCF devices

   (+)  return  of d1.l from pipe-systasks
   (+)  passing of d2.l to   pipe-open
*/